tag delete problem is fixed

--- a/src/WebUI/ClientApp/src/app/todo/todo.component.html
+++ b/src/WebUI/ClientApp/src/app/todo/todo.component.html
@@ -75,20 +75,34 @@
             <div class="col-4 mt-1">
 
 
-
               <span *ngIf="item.itemTags?.length > 0">
                 <ng-container *ngFor="let tag of item.itemTags.slice(0, 2); let i = index">
-                  <span class="pill-primary" style="cursor:pointer;"
+                  <span 
+                    [ngClass]="{
+                      'pill-primary': item.priority === 0,
+                      'pill-success': item.priority === 1,
+                      'pill-warning': item.priority === 2,
+                      'pill-danger': item.priority === 3
+                    }"
+                    style="cursor:pointer;"
                     (click)="choseItemTag(deleteItemTagModalTemplate, tag)">
                     {{ tag?.tags?.[0]?.name }}
                   </span>
                 </ng-container>
-                <span style="cursor: pointer;" *ngIf="item.itemTags.length > 2"
-                  (click)="openTagList(tagListModalTemplate, item.id)" class="pill-primary">
+                <span 
+                  style="cursor: pointer;" 
+                  *ngIf="item.itemTags.length > 2"
+                  (click)="openTagList(tagListModalTemplate, item.id)" 
+                  [ngClass]="{
+                        'pill-primary': item.priority === 0,
+                      'pill-success': item.priority === 1,
+                      'pill-warning': item.priority === 2,
+                      'pill-danger': item.priority === 3
+                  }">
                   +{{ item.itemTags.length - 2 }} more
                 </span>
               </span>
-
+              
 
             </div>
             <div class="col-1">
@@ -121,7 +135,7 @@
     </button>
   </div>
   <div class="modal-body">
-    <p>All items will be permanently deleted.</p>
+    <p>Item will be permanently deleted.</p>
     <div *ngIf="debug">
       <pre>{{ chosenItemTag | json }}</pre>
     </div>
@@ -129,7 +143,7 @@
   <div class="modal-footer clearfix">
     <div class="float-end">
       <button type="button" class="btn btn-default" (click)="itemTagOptionsModalRef.hide()">Cancel</button>
-      <button type="button" class="btn btn-danger" (click)="deleteItemTag(deleteItemTagModalTemplate)">Delete</button>
+      <button type="button" class="btn btn-danger" (click)="deleteItemTag()">Delete</button>
     </div>
   </div>
 </ng-template>
@@ -160,12 +174,19 @@
       </div>
     </div>
     <div>
+      <div>
+        Chosen Tags
+      </div>
+      <br>
       <div class="tag-grid">
         <span *ngFor="let tag of displayedMyTags">
-          <div class="card-body">
-            <span class="pill-success">{{tag.name}}</span>
-          </div>
-        </span>
+        <div class="card-body tag-container">
+          <span class="pill-success tag-hover">
+            {{ tag.name }}
+            <span class="tag-remove" (click)="deleteItemTagWithIds(selectedItemTagId,tag.id)">×</span>
+          </span>
+        </div>
+      </span>
       </div>
     </div>
   </div>
