--- a/src/WebUI/ClientApp/src/app/todo/todo.component.scss
+++ b/src/WebUI/ClientApp/src/app/todo/todo.component.scss
@@ -48,4 +48,48 @@
 .tag-item {
   flex: 1 1 30%; 
   min-width: 100px; 
+}.tag-container {
+  position: relative;
+  display: inline-block;
+}
+
+.tag-hover {
+  transition: opacity 0.3s ease-in-out;
+  cursor: pointer;
+  padding-right: 22px; /* Çarpı için ekstra boşluk bırak */
+  position: relative;
+}
+
+.tag-hover:hover {
+  opacity: 0.7;
+}
+
+/* Çarpı butonu */
+.tag-remove {
+  position: absolute;
+  top: 50%;
+  right: 4px;
+  transform: translateY(-50%);
+  font-size: 12px;  /* Daha küçük boyut */
+  font-weight: bold;
+  color: #fff;
+  background: rgba(200, 0, 0, 0.8); /* Daha az parlak kırmızı */
+  border-radius: 50%;
+  width: 14px;  /* Boyut optimize edildi */
+  height: 14px;
+  text-align: center;
+  line-height: 14px;
+  cursor: pointer;
+  display: none; /* Varsayılan olarak gizli */
+  transition: background 0.2s ease-in-out;
+}
+
+/* Hover efektiyle çarpıyı göster */
+.tag-hover:hover .tag-remove {
+  display: inline-block;
+}
+
+/* Çarpı butonuna hover olunca biraz koyulaşsın */
+.tag-remove:hover {
+  background: rgba(150, 0, 0, 0.9);
 }
