--- a/src/WebUI/ClientApp/src/app/home/home.component.html
+++ b/src/WebUI/ClientApp/src/app/home/home.component.html
@@ -8,20 +8,28 @@
 </p>
 <h3>Feature 1</h3>
 <ul>
-  <li>Users can change the background color for each Todo item.</li>
+  <li>✅ Users can change the background color for each Todo item.</li>
 </ul>
 <h3>Feature 2</h3>
 <ul>
-  <li>Users can add and remove tags to the Todo items.</li>
-  <li>Users can filter Todo items by tags.</li>
-  <li>Add shortcuts on UI for the most used tags by the user. (nice to have)</li>
-  <li>Add text search. (nice to have)</li>
+  <li>✅ Users can add and remove tags to the Todo items.</li>
+  <li>✅ Users can filter Todo items by tags.</li>
+  <li>✅ Add shortcuts on UI for the most used tags by the user. (nice to have)
+    <span style="color:red;">
+      <u>
+        in the Todo Item Update Form there is a Sugested Tags
+      </u>
+
+    </span>
+
+  </li>
+  <li>✅ Add text search. (nice to have)</li>
 </ul>
 <h3>Feature 3</h3>
 <ul>
-  <li>Add soft delete for Todo lists and items.</li>
-  <li>Deleted items should not be deleted from the database</li>
-  <li>Deleted items should not be shown on the UI or included in any query</li>
+  <li>✅ Add soft delete for Todo lists and items.</li>
+  <li>✅ Deleted items should not be deleted from the database</li>
+  <li>✅ Deleted items should not be shown on the UI or included in any query</li>
 </ul>
 
 <p><u>Include as much unit test coverage as possible for the code you add.</u></p>
